# plotprofile

./: .gitignore  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: cli.rst  conf.py  customisation.rst  data-input.rst  getting-started.rst  index.rst  installation.rst  json_styles.rst  modules.rst  plotProfile.rst  plotprofile.rst  quickstart.rst  usage.rst
docs/source/usage/: behaviour.rst  customisation.rst  data-input.rst  styles.rst
examples/: colab.ipynb  example.ipynb  examples_rtd.py
legacy/: plotProfile.ipynb
src/plotProfile/: __init__.py  cli.py  plot.py  styles.json  utils.py
tmp_test/: example.ipynb
