[project]
name = "reaction_profile_plotter"
version = "1.0.0"
description = "Plot reaction profiles with customizable curves and labels"
authors = [{name = "Dr A Goodfellow"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.7"
numpy = "^1.23"
scipy = "^1.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

